[package]
name = "tracing-gcloud-layer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-stackdriver = "0.10"
tracing-subscriber = "0.3"
base64 = "0.22"
ring = "0.17"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.20"
